force-app/main/default/objects/ReservationSettings__c/ReservationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Reservation Settings</label>
</CustomObject>