force-app/main/default/objects/ReservationSettings__c/fields/AutoApproveInterval__c.field-meta.xml
<CustomField>
    <fullName>AutoApproveInterval__c</fullName>
    <label>AutoApproveInterval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>