force-app/main/default/objects/ReservationSettings__c/fields/FutureOptionDays__c.field-meta.xml
<CustomField>
    <fullName>FutureOptionDays__c</fullName>
    <label>Future Option Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>