force-app/main/default/objects/ReservationSettings__c/fields/PastOptionDays__c.field-meta.xml
<CustomField>
    <fullName>PastOptionDays__c</fullName>
    <label>Past Option Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>