force-app/main/default/objects/ReservationSettings__c/fields/PriorNotificationDays__c.field-meta.xml
<CustomField>
    <fullName>PriorNotificationDays__c</fullName>
    <label>Prior Notification Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>